--- a/menu/stefari-cafe-order-page/stefari-menu.html
+++ b/menu/stefari-cafe-order-page/stefari-menu.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <script src="script.js" defer></script> 
+  <link rel="stylesheet" href="/menu/stefari-cafe-order-page/stefari-menu.css">
+  <script src="/menu/stefari-cafe-order-page/stefari-order.js" defer></script> 
+
    <!-- Font Awesome 6.5 CSS -->
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 
