--- a/layout-sample.html
+++ b/layout-sample.html
@@ -1,171 +1,245 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Menu Item Order</title>
-<style>
-    /* Styling for the pop-up */
-    .popup {
-        display: none;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.5);
-        z-index: 1000;
-    }
-
-    .popup-content {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        background-color: #fff;
-        padding: 20px;
-        border-radius: 5px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-    }
-
-    /* Styling for the tabs */
-    .tab {
-        display: none;
-    }
-
-    .tab.active {
-        display: block;
-    }
-
-    /* Styling for the tab buttons */
-    .tab-btn {
-        background-color: #f0f0f0;
-        color: #333;
-        border: none;
-        padding: 10px 20px;
-        cursor: pointer;
-        border-top-left-radius: 5px;
-        border-top-right-radius: 5px;
-        margin-right: -1px; /* Adjust for border width */
-    }
-
-    .tab-btn.active {
-        background-color: #fff;
-        border-bottom: none;
-    }
-
-    /* Styling for the options */
-    .option {
-        margin-bottom: 10px;
-    }
-
-    /* Styling for the tap-to-light buttons */
-    .light-button {
-        background-color: #ccc;
-        color: #333;
-        border: none;
-        padding: 10px 20px;
-        cursor: pointer;
-        border-radius: 5px;
-        margin-right: 10px;
-    }
-
-    .light-button.active {
-        background-color: #f0f0f0;
-    }
-
-    /* Media query for responsiveness */
-    @media screen and (max-width: 600px) {
-        .popup-content {
-            width: 90%;
-        }
-    }
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Product Details</title>
+    <style>
+        /* CSS styling will be added later */
+    </style>
 </head>
+
 <body>
-
-<!-- Button to trigger the pop-up -->
-<button class="popup-btn" onclick="togglePopup()">Open Menu</button>
-
-<!-- Pop-up with tab sections -->
-<div class="popup" id="popup">
-    <div class="popup-content">
-        <!-- Tab buttons -->
-        <button class="tab-btn active" onclick="openTab(event, 'order')">Order</button>
-        <button class="tab-btn" onclick="openTab(event, 'social')">Socialize</button>
-
-        <!-- Tab contents -->
-        <div id="order" class="tab active">
-            <h2>Order Section</h2>
-            <!-- Single selection option -->
-            <div class="option" id="tap-options">
-                <fieldset>
-                    <legend>Select Tap:</legend>
-                    <button class="light-button" data-value="Option 1">Option 1</button>
-                    <button class="light-button" data-value="Option 2">Option 2</button>
-                    <button class="light-button" data-value="Option 3">Option 3</button>
-                </fieldset>
+    <div class="popup-container" id="popupContainer">
+        <div class="popup-content">
+            <span class="close-icon" onclick="closePopup()">&#10006;</span>
+            <div class="tab">
+                <button class="tablinks" onclick="openTab(event, 'details')">Details</button>
+                <button class="tablinks" onclick="openTab(event, 'social')">Social</button>
             </div>
-            <!-- Multiple selection option -->
-            <div class="option" id="extra-options">
-                <fieldset>
-                    <legend>Select Extras:</legend>
-                    <button class="light-button">Extra 1</button>
-                    <button class="light-button">Extra 2</button>
-                    <button class="light-button">Extra 3</button>
-                </fieldset>
+            <div id="details" class="tabcontent">
+                <div class="product-details">
+                    <h2>Product Name</h2>
+                    <img src="/menu/stefari-cafe-order-page/img1.jpg" alt="Product Image" id="mainImage">
+                    <div class="thumbnails">
+                        <div class="thumbnail">
+                            <img src="/menu/stefari-cafe-order-page/img1.jpg" alt="Thumbnail 1"
+                                onclick="changeMainImage(this.src)">
+                        </div>
+                        <div class="thumbnail">
+                            <img src="/menu/stefari-cafe-order-page/img2.jpg" alt="Thumbnail 2"
+                                onclick="changeMainImage(this.src)">
+                        </div>
+                        <div class="thumbnail">
+                            <img src="/menu/stefari-cafe-order-page/img3.jpg" alt="Thumbnail 3"
+                                onclick="changeMainImage(this.src)">
+                        </div>
+                    </div>
+                    <div class="tap-options">
+                        <div class="tap-option" onclick="toggleTapOption(this)">Size</div>
+                        <div class="tap-option" onclick="toggleTapOption(this)">Extras</div>
+                    </div>
+                    <button id="addToCartButton" onclick="addToCart()">Add to Cart</button>
+                </div>
             </div>
-        </div>
-        <div id="social" class="tab">
-            <h2>Socialize Section</h2>
-            <!-- Content for socializing -->
-            <p>Socialize with others here...</p>
+            <div id="social" class="tabcontent">
+                <h3>Social Media Integration</h3>
+                <!-- Add social media features here -->
+            </div>
         </div>
     </div>
-</div>
 
-<script>
-    document.querySelectorAll('.light-button').forEach(button => {
-        button.addEventListener('click', function() {
-            if (this.parentNode.parentNode.id === 'tap-options') {
-                selectOption(this);
-            } else {
-                toggleExtra(this);
+    <button onclick="openPopup()">Open Product Details</button>
+
+    <script>
+
+
+        // Datos del producto
+        const product = {
+            name: "Product Name",
+            mainImageUrl: "/menu/stefari-cafe-order-page/img1.jpg",
+            thumbnails: [
+            ],
+            description: "Description of the product goes here...",
+            price: 10.00
+        };
+
+        function changeMainImage(imageSrc) {
+            const mainImage = document.getElementById('mainImage');
+            mainImage.src = imageSrc;
+        }
+
+        function toggleTapOption(option) {
+            const tapOptions = document.querySelectorAll('.tap-option');
+            tapOptions.forEach(opt => opt.classList.remove('active'));
+            option.classList.add('active');
+        }
+
+        function addToCart() {
+            closePopup(); // Cerrar el pop-up después de añadir al carrito
+            // Lógica para añadir al carrito
+        }
+
+        window.onload = function () {
+            openPopup();
+            const productDetailsElement = document.querySelector('.product-details');
+            productDetailsElement.querySelector('h2').textContent = product.name;
+            productDetailsElement.querySelector('#mainImage').src = product.mainImageUrl;
+
+            const thumbnailsContainer = productDetailsElement.querySelector('.thumbnails');
+            product.thumbnails.forEach(thumbnailSrc => {
+                const thumbnailDiv = document.createElement('div');
+                thumbnailDiv.classList.add('thumbnail');
+                const thumbnailImage = document.createElement('img');
+                thumbnailImage.src = thumbnailSrc;
+                thumbnailImage.alt = "Thumbnail";
+                thumbnailImage.onclick = function () {
+                    changeMainImage(thumbnailSrc);
+                };
+                thumbnailDiv.appendChild(thumbnailImage);
+                thumbnailsContainer.appendChild(thumbnailDiv);
+            });
+        };
+    </script>
+
+
+
+    <style>
+        /* CSS styling for the pop-up */
+
+        .popup-container {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            justify-content: center;
+            align-items: center;
+            z-index: 9999;
+        }
+
+        .popup-content {
+            width: 50%;
+            height: 80%;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background-color: #fff;
+            padding: 16px;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+            overflow: auto;
+        }
+
+        @media only screen and (max-width: 767px) {
+            .popup-content {
+                width: 88%;
+                height: 80%;
             }
-        });
-    });
-
-    function togglePopup() {
-        var popup = document.getElementById("popup");
-        popup.style.display = popup.style.display === "none" ? "block" : "none";
-    }
-
-    function openTab(evt, tabName) {
-        var tabcontent = document.getElementsByClassName("tab");
-        for (var i = 0; i < tabcontent.length; i++) {
-            tabcontent[i].style.display = "none";
         }
-        var tablinks = document.getElementsByClassName("tab-btn");
-        for (var i = 0; i < tablinks.length; i++) {
-            tablinks[i].classList.remove("active");
+
+        .close-icon {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            cursor: pointer;
         }
-        document.getElementById(tabName).style.display = "block";
-        evt.currentTarget.classList.add("active");
-    }
 
-    function selectOption(button) {
-        var buttons = document.querySelectorAll('#tap-options .light-button');
-        buttons.forEach(function(btn) {
-            btn.classList.remove('active');
-        });
-        button.classList.add('active');
-    }
+        /* CSS styling for the tabs */
 
-    function toggleExtra(button) {
-        button.classList.toggle('active');
-    }
-</script>
+        .tab {
+            overflow: hidden;
+        }
 
+        .tab button {
+            background-color: inherit;
+            float: left;
+            border: none;
+            outline: none;
+            cursor: pointer;
+            padding: 10px 20px;
+            transition: 0.3s;
+        }
+
+        .tab button:hover {
+            background-color: #ddd;
+        }
+
+        .tab button.active {
+            background-color: #ccc;
+        }
+
+        .tabcontent {
+            display: none;
+            padding: 20px;
+        }
+
+        /* CSS styling for the product details */
+
+        .product-details {
+            text-align: center;
+        }
+
+        .product-details h2 {
+            margin-top: 0;
+        }
+
+        .product-details img {
+            max-width: 150px;
+            height: auto;
+            border-radius: 5px;
+            cursor: pointer;
+            margin-bottom: 10px;
+        }
+
+        .thumbnails {
+            display: flex;
+            justify-content: center;
+            gap: 10px;
+            margin-top: 10px;
+        }
+
+        .thumbnail img {
+            width: 50px;
+            height: auto;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        .tap-options {
+            display: flex;
+            justify-content: center;
+            margin-top: 20px;
+        }
+
+        .tap-option {
+            background-color: #ddd;
+            border-radius: 5px;
+            padding: 10px 20px;
+            margin: 10px;
+            cursor: pointer;
+        }
+
+        .tap-option.active {
+            background-color: #65a9ff;
+            color: #fff;
+        }
+
+        #addToCartButton {
+            display: block;
+            margin: 20px auto;
+            padding: 10px 20px;
+            border: none;
+            background-color: #65a9ff;
+            color: #fff;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+    </style>
 </body>
-</html>
 
+</html>
