updated for cris

--- a/pages/main-page.html
+++ b/pages/main-page.html
@@ -15,9 +15,13 @@
 <body>
 
 <nav class="navbar">
+
+  <a href="/index.html">
   <div class="logo">
     <img src="/assets/delivery-service-in-kankakee-logo.png" alt="Tu Logo">
   </div>
+</a>
+
   <div class="menu">
     <a href="/index.html">Home</a>
 <!-- <a href="#">Catering</a> -->
@@ -127,11 +131,13 @@
   
   
     <div class="featuredRestaurants">
+      <a href="/menu/uplifted-bistro-order-page/uplifted-bistro-menu.html">
       <div class="restaurantCard" data-category="breakfast">
         <img class="restaurantImage" src="/pages/restaurants/uplifted-bistro.png" alt="Restaurant Image">
         <div class="restaurantName">Uplifted Bistro</div>
         <div class="restaurantHours"> 10:00AM - 08:00PM</div>
       </div>
+    </a>
     </div>
   
   
@@ -207,7 +213,7 @@
 
       <div class="restaurantGrid" id="restaurantGrid">
         <!-- Open Restaurant Example-->
-        <a href="/menu/uplifted-bistro-menu.html"  style="text-decoration: none;">
+        <a href="/menu/uplifted-bistro-order-page/uplifted-bistro-menu.html"  style="text-decoration: none;">
         <div class="restaurantCard" data-category="breakfast">
           <img class="restaurantImage" src="/pages/restaurants/uplifted-bistro.png" alt="Restaurant Image">
           <div class="restaurantName">Uplifted Bistro</div>
