--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
 <body>
 
 <nav class="navbar">
-  <div class="logo">
-    <img src="/assets/delivery-service-in-kankakee-logo.png" alt="Tu Logo">
+  <a href="/index.html">
+  <div class="logo" href="/">
+   
+  <img src="/assets/delivery-service-in-kankakee-logo.png" alt="Tu Logo">
+  </a>
+
   </div>
   <div class="menu">
     <a href="/index.html">Home</a>
