--- a/pages/restaurantsNearMe.html
+++ b/pages/restaurantsNearMe.html
@@ -14,8 +14,12 @@
 <body>
 
 <nav class="navbar">
+    
+    <a href="/index.html">
   <div class="logo">
     <img src="/assets/delivery-service-in-kankakee-logo.png" alt="Tu Logo">
+    </a>
+
   </div>
   <div class="menu">
     <a href="/index.html">Home</a>
